examples/test/testpolicy13582.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13582
  namespace: namespace301
spec:
  podSelector:
    matchLabels:
      key36: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value42
          key1: value37
          key18: value39
      podSelector:
        matchLabels:
          key8: value7
          key39: value25
